--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -959,7 +959,7 @@
     },
     "TIME_TRACKING": {
       "B": {
-        "ALREADY_DID": "已完成",
+        "ALREADY_DID": "休息过了",
         "SNOOZE": "暂停 {{time}}"
       },
       "B_TTR": {
@@ -1009,7 +1009,7 @@
         "TASKS": "任务",
         "TOTAL_TIME": "总花费时间：",
         "WEEK_NR": "{{nr}}周 ",
-        "WORKED": "已完成"
+        "WORKED": "已工作"
       },
       "D_CONFIRM_RESTORE": "您确定要将任务 <strong>“{{title}}”</strong> 移动到今天的任务列表中吗？",
       "D_EXPORT_TITLE": "导出 {{start}} - {{end}}工作日志",
